--- a/src/app/pages/bookshelf/bookshelf.component.html
+++ b/src/app/pages/bookshelf/bookshelf.component.html
@@ -1,1 +1,66 @@
-<p>bookshelf works!</p>
+<div class="bookshelf">
+  <h1>Minha estante</h1>
+
+  <div class="bookshelf__bookslist">
+    <div class="list">
+      <div class="title">
+        <h2>Lendo</h2>
+        Ver todos
+      </div>
+
+      <div class="books">
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+      </div>
+    </div>
+
+    <div class="list">
+      <div class="title">
+        <h2>Quero Ler</h2>
+        Ver todos
+      </div>
+
+      <div class="books">
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+      </div>
+    </div>
+
+    <div class="list">
+      <div class="title">
+        <h2>Tenho</h2>
+        Ver todos
+      </div>
+
+      <div class="books">
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+        <div class="book">
+          <img src="https://m.media-amazon.com/images/I/51HSQRrpu3L.jpg" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
