--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,4 +1,5 @@
-$c-gray: #9b9b9b;
-$c-lightgray: #e2e8f2;
+$c-grey: #6e6d6d;
+$c-lightgrey: #f1f1f2;
 $c-yellow: #f7a827;
 $c-lightyellow: #fde0b5;
+$c-black: #000;
